Bug 120991 - Insert OLE Object from file causes crash, if Experimental features are enabled
Summary: Insert OLE Object from file causes crash, if Experimental features are enabled
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Michael Stahl
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: OLE-Objects redlinehide-regressions
  Show dependency treegraph
 
Reported: 2018-10-28 14:28 UTC by Buovjaga
Modified: 2020-11-19 11:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of crash with master (25.55 KB, text/plain)
2018-10-28 14:29 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2018-10-28 14:28:41 UTC
1. Open any application where you can insert OLE objects
2. Insert - Object - OLE object
3. Create from file, search
4. OK after file has been picked

Crashes instead of inserting it.
No crash on Win.
Not dependent on VCL backend.

Arch Linux 64-bit
Version: 6.2.0.0.alpha1+
Build ID: bfa6aeb379e5dfcf6f1f97b3365ab551995ab3d5
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on 28 October 2018
Comment 1 Buovjaga 2018-10-28 14:29:06 UTC
Created attachment 146093 [details]
GDB trace of crash with master
Comment 2 Xisco Faulí 2018-10-28 16:45:50 UTC
I can't reproduce it in

Version: 6.2.0.0.alpha1+
Build ID: d7413085daa452b6315893e311d4249f23d0097f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

nor in

Version: 6.2.0.0.alpha1+
Build ID: 6ddda80effd0fd7edac16b050bb598721840cde4
CPU threads: 1; OS: Linux 4.13; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-10-25_20:06:01
Locale: en-US (en_US.UTF-8); Calc: threaded
Comment 3 Buovjaga 2018-10-28 17:08:45 UTC Comment hidden (obsolete)
Comment 4 Buovjaga 2018-10-28 17:55:47 UTC
Nope, it worked in safe mode, but after user profile reset it still crashes.
Comment 5 Buovjaga 2018-10-28 18:27:10 UTC
Found the cause: Experimental features need to be enabled
Comment 6 MM 2018-10-28 21:37:30 UTC
Confirmed on ubuntu 16.04 x64 with Version: 6.2.0.0.alpha1+
Build ID: 96cf06c947838120e37f3fbb4d0543dd882cb20c
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-10-25_22:45:16 Locale: en-US (en_US.UTF-8); Calc: threaded

crashreport.libreoffice.org/stats/crash_details/d7b35cee-34de-41ae-98d8-a7e086b0b34d

Unconfirmed with Version: 6.2.0.0.alpha1+
Build ID: ae9f37ba753519ae4a2ae6384d052d417359602f
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-10-22_23:05:02
Locale: en-US (en_US.UTF-8); Calc: threaded
Comment 7 MM 2018-10-28 22:02:49 UTC
Version: 6.2.0.0.alpha1+
Build ID: ae9f37ba753519ae4a2ae6384d052d417359602f

actually *does* crash.

But this one doesn't: Version: 6.1.0.0.alpha1+
Build ID: 47dc3115f12ff16dc326b6edd12c46e6a6ef1843
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-05-17_00:32:17
Locale: en-US (en_US.UTF-8); Calc
Comment 8 Xisco Faulí 2018-10-29 10:44:21 UTC
Also reproduced if SW_REDLINEHIDE=1 is used before https://cgit.freedesktop.org/libreoffice/core/commit/?id=ae3150b1e1863e854224c2e41c7e50991f945dad

Regression introduced by:

author	Michael Stahl <Michael.Stahl@cib.de>	2018-08-08 16:09:38 +0200
committer	Michael Stahl <Michael.Stahl@cib.de>	2018-09-19 10:18:21 +0200
commit b7e4feb9d985750f04b53e630fa68ab471743a14 (patch)
tree f5dee8b14c39491d06ce1aaa055e44c7d410c4b1
parent 4532845e22c10f252840887e55002307227b2390 (diff)
sw_redlinehide_2: store flag in settings.xml too
... and restore the model show mode after export.

Bisected with: bibisect-linux64-6.2

Adding Cc: to Michael Stahl
Comment 9 Michael Stahl 2018-10-29 11:36:00 UTC
already fixed in feature/sw_redlinehide_3 branch by:

commit 877ca8d821ec300810a76d1a2ddb2e409d225540
Author:     Michael Stahl <Michael.Stahl@cib.de>
AuthorDate: Fri Oct 12 16:33:00 2018 +0200

    sw_redlinehide_3: fix crash when storing clipboard document
    
    It doesn't have a layout, of course.
    
    Change-Id: Iec4809ec4a14e1fa9852d09619a8b344419b29e7
Comment 10 Xisco Faulí 2018-10-29 15:05:06 UTC
Oh nice!
Feel free to close it then. Otherwise, we can wait until the branch gets merged...
Comment 11 Michael Stahl 2018-11-15 14:54:00 UTC
this is commit 57aa6493b36a0f7c153e64fecca623f6136a160b now on master, not sure why the bot didn't pick it up...
Comment 12 Xisco Faulí 2018-11-16 10:47:14 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 5edc23dbc53773536265fd6a54319d9cd1cd9e99
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Michael Stahl, Thanks for fixing this!!