tdf#120991 sw_redlinehide_3: fix crash when storing clipboard document

It doesn't have a layout, of course.

Change-Id: Iec4809ec4a14e1fa9852d09619a8b344419b29e7
(cherry picked from commit 57aa6493b36a0f7c153e64fecca623f6136a160b)